# QMLClient

./: CMakeLists.txt  Main.qml  README.md  clientconnection.cpp  clientconnection.h  main.cpp
